:sparkles: now support footer

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -24,7 +24,7 @@
       </ul>
     </div>
     <!-- Heweather plugin -->
-    {{ if .Site.Params.Heweather }}
+    {{ if .Site.Params.heweather }}
     <div id="he-plugin-simple"></div>
     {{ end }}
   </nav>
