--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -20,7 +20,7 @@
 }
 </script>
 
-{{ if .Site.Params.Heweather }}
+{{ if ne .Site.Params.heweather false }}
 <script>
   /**
    * Heweather plugin
@@ -46,15 +46,51 @@
       "fixed": "false",
       "vertical": "center",
       "horizontal": "center",
-      "key": "{{ .Site.Params.Heweather }}"
+      "key": "{{ .Site.Params.heweather }}"
     }
   }
 </script>
 <script src="https://widget.heweather.net/simple/static/js/he-simple-common.js?v=1.1"></script>
 {{ end }}
 
-<!--
-<footer>
 
-</footer>
--->
+{{ if ne .Site.Params.footer.enabled false }}
+  {{ $author := .Site.Params.author }}
+  {{ with .Site.Params.footer }}
+    <footer>
+      {{ if .custom }}
+        <div class="footer-line">
+          <span> {{ .custom | safeHTML }} </span>
+        </div>
+      {{ end }}
+
+      {{ if ne .hugo false }}
+        <div class="footer-line">
+          Powered by <a target="_blank" one-link-mark="yes" href="https://gohugo.io" title="Hugo" class="u-theme-f"> Hugo </a> |
+          Theme by
+          <a target="_blank" one-link-mark="yes" href="https://github.com/SylleoYr/hugo-theme-freshstart/tree/magic-modification" title="freshstart" class="u-theme-f">
+            <i class="fas fa-heartbeat u-theme-f"></i> freshstart
+          </a>
+        </div>
+      {{ end }}
+
+      {{ if ne .copyright false }}
+        <div class="footer-line">
+          <i class="far fa-copyright fa-fw"></i>
+          <span>
+            {{ if .since }}
+              {{- if lt .since now.Year }} {{ .since }} - {{ end }}
+            {{ end }}
+            {{ now.Year -}}&nbsp;&nbsp;{{ $author }}
+          </span>
+        </div>
+      {{ end }}
+
+      {{ if .icp }}
+        <div class="footer-line">
+          <span> {{ .icp | safeHTML }}</span>
+        </div>
+      {{ end }}
+    </footer>
+  {{ end }}
+{{ end }}
