--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -23,9 +23,12 @@
         </li>
       </ul>
     </div>
-    <!-- Heweather plugin -->
+
+    {{/*  Heweather plugin  */}}
     {{ if .Site.Params.heweather }}
     <div id="he-plugin-simple"></div>
     {{ end }}
+    {{/*  Heweather plugin ends  */}}
+    
   </nav>
 </header>
