--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -30,11 +30,11 @@
   <script src="/js/init.js"></script>
   <script>
     // window.onload = () => {
-    //   init({{ .Site.Params.hitokoto }});
+    //   init();
     // }
 
     document.addEventListener('DOMContentLoaded', (event) => {
-      init({{ .Site.Params.hitokoto }});
+      init();
     });
   </script>
   {{/*  search and init scripts end  */}}
