--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -19,7 +19,7 @@
       .search-engines input:hover+label span, 
       .search-engines input:checked+label span, 
       .searchbox input, 
-      #hitokoto, #hitokoto-from, 
+      #poetry, #poetry-from, 
       .card ul li:hover *, 
       .card ul li::first-letter, .card ul li i {
         color: {{ . | safeCSS }};
