--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
                   <span class="tile-lg">
                     <i class="{{ .icon }}"></i>
                   </span>
-                  {{ .group }}
+                  {{- .group -}}
                 </label>
               {{ end }}
             {{ end }}
