add ribbon.js and autofocus on search box

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -109,6 +109,14 @@
 {{ end }}
 {{/*  Heweather config ends  */}}
 
+{{/* ribbon canvas */}}
+{{ if .Site.Params.ribbon.enabled }}
+  {{ with .Site.Params.ribbon }}
+    <script type="text/javascript" size="{{ .size }}" alpha="{{ .alpha }}" zIndex="{{ .zIndex }}" src="/js/ribbon.min.js"></script>
+  {{ end }}
+{{ end }}
+{{/* ribbon canvas ends*/}}
+
 {{/*  custom javascripts  */}}
 {{ if .Site.Params.customJS.enabled }}
   {{ range .Site.Params.customJS.items }}
