--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,11 +14,11 @@
     <div class="nav-right">
       <ul class="datetime">
         <li class="date">
-          <i class="far fa-calendar"></i>&nbsp;
+          <i class="far fa-calendar u-theme-f"></i>&nbsp;
           <span id="current_date"></span>
         </li>
         <li class="time">
-          <i class="far fa-clock"></i>&nbsp;
+          <i class="far fa-clock u-theme-f"></i>&nbsp;
           <span id="current_time"></span>
         </li>
       </ul>
