--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -33,7 +33,7 @@
       .search-engines input:hover+label span, 
       .search-engines input:checked+label span, 
       .searchbox input, 
-      #poetry, #poetry-from, 
+      #poetry, #poetry-author, 
       .card ul li:hover *, 
       .card ul li::first-letter, .card ul li i {
         color: {{ . | safeCSS }};
