update README and exampleSite

--- a/static/css/search.css
+++ b/static/css/search.css
@@ -195,11 +195,11 @@
 
 #search-button:hover {
     background: rgba(30, 30, 30, 1.0);
-    cursor: pointer
+    cursor: pointer;
 }
 
 #search-button i {
-    /* color: #fff; */
+    color: #fff;
     font-size: 18px
 }
 
