--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -17,8 +17,8 @@
         <div class="footer-line">
           Powered by <a target="_blank" one-link-mark="yes" href="https://gohugo.io" title="Hugo" class="u-theme-f"> Hugo </a> |
           Theme by
-          <a target="_blank" one-link-mark="yes" href="https://github.com/SylleoYr/hugo-theme-freshstart/tree/magic-modification" title="freshstart" class="u-theme-f">
-            <i class="fas fa-heartbeat u-theme-f"></i> freshstart
+          <a target="_blank" one-link-mark="yes" href="https://github.com/SylleoYr/hugo-theme-OriginStart" title="OriginStart" class="u-theme-f">
+            <i class="fas fa-heartbeat u-theme-f"></i> OriginStart
           </a>
         </div>
       {{ end }}
