non-root path fixes

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -112,7 +112,7 @@
 {{/* ribbon canvas */}}
 {{ if .Site.Params.ribbon.enabled }}
   {{ with .Site.Params.ribbon }}
-    <script type="text/javascript" size="{{ .size }}" alpha="{{ .alpha }}" zIndex="{{ .zIndex }}" src="/js/ribbon.min.js"></script>
+    <script type="text/javascript" size="{{ .size }}" alpha="{{ .alpha }}" zIndex="{{ .zIndex }}" src="./js/ribbon.min.js"></script>
   {{ end }}
 {{ end }}
 {{/* ribbon canvas ends*/}}
