--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,9 +8,9 @@
   {{ if .Site.Params.description }}<meta name="description" content="{{ .Site.Params.description }}" />{{ end }}
   {{ if .Site.Params.favicon }} <link rel="icon" href="{{ .Site.Params.favicon }}" /> {{ end }}
 
-  <link type="text/css" rel="stylesheet" href="/css/main.css" />
-  <link type="text/css" rel="stylesheet" href="/css/search.css" />
-  <link type="text/css" rel="stylesheet" href="/css/color.css" />
+  <link type="text/css" rel="stylesheet" href="./css/main.css" />
+  <link type="text/css" rel="stylesheet" href="./css/search.css" />
+  <link type="text/css" rel="stylesheet" href="./css/color.css" />
   
   {{/*  font awesome CDN link  */}}
   {{ if .Site.Params.fontawesomeCDN }}
@@ -26,8 +26,8 @@
   {{/*  font awesome CDN link ends  */}}
 
   {{/*  search and init scripts  */}}
-  <script src="/js/search.js"></script>
-  <script src="/js/init.js"></script>
+  <script src="./js/search.js"></script>
+  <script src="./js/init.js"></script>
   <script>
     // window.onload = () => {
     //   init();
