--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -18,7 +18,7 @@
           Powered by <a target="_blank" one-link-mark="yes" href="https://gohugo.io" title="Hugo" class="u-theme-f"> Hugo </a> |
           Theme by
           <a target="_blank" one-link-mark="yes" href="https://github.com/SylleoYr/hugo-theme-OriginStart" title="OriginStart" class="u-theme-f">
-            <i class="fas fa-heartbeat u-theme-f"></i> OriginStart
+            <i class="fas fa-heartbeat u-theme-f"></i>&nbsp;OriginStart
           </a>
         </div>
       {{ end }}
