--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,7 +11,7 @@
 
     {{/*  tooltip (description of bookmark)  */}}
     <div id="tooltip">
-      <i class="far fa-hand-point-right u-theme-f"></i>
+      <i class="far fa-hand-point-right u-theme-f"></i>&nbsp;
       <p id="tooltiptext">tooltip</p>
     </div>
     {{/*  tooltip ends  */}}
