--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -101,7 +101,7 @@
       "fixed": "false",
       "vertical": "center",
       "horizontal": "center",
-      "key": "{{ .Site.Params.heweather }}"
+      "key": "{{- .Site.Params.heweather -}}"
     }
   }
 </script>
